# complex_contagions_package

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml
data/: checkpoint.json
data/batches/: batch_simulation_alpha_100.0_to_10.nc
notebooks/: visualization.ipynb
src/complex_contagions_package/: __init__.py  analyser.py  analyser2.py  cli.py  cli_rec.py  cluster_analyser.py  dataset_creator.py  dataset_creator_for_recov_rate.py  diffusion_behavior.py  logging.py  network_generator.py  simulator.py  visualizer.py  visualizer2.py
